fix layout issue

--- a/app/assets/stylesheets/comparative_genome.css.sass
+++ b/app/assets/stylesheets/comparative_genome.css.sass
@@ -103,7 +103,7 @@ html
       position: relative
       cursor: pointer
       background-color: rgba(222, 230, 229, 0.9)
-      width: calc(100vw - 40px)
+      width: calc(100vw - 55px)
       height: 30px
       z-index: 1000
       -moz-transition: background-color 0.2s ease-out, opacity 0.2s ease-out
